--- a/_includes/loading.html
+++ b/_includes/loading.html
@@ -1,6 +1,6 @@
 <div id="loading">
     <div class="loading_box">
-        <img src="{{ '/assets/img/loading.webp' | prepend: site.baseurl }}">
-        <p>Now Loading ...</p>
+        <!-- <img src="{{ '/assets/img/loading.webp' | prepend: site.baseurl }}"> -->
+        <p>여는 중 ...</p>
     </div>
 </div>
