--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -1,9 +1,18 @@
-$color-wenge: #66545E;
-$color-beige: #F1EBE5;
+// $color-wenge: #66545E;
+// $color-beige: #F1EBE5;
+// $color-darkbrown: #3A241A;
+// $color-darkorange: #B04008;
+// $color-rose: #fa4251;
+// $color-aqua: #64c8c8;
+// $sidebarwd: 18rem;
+// $contentwd: 54rem;
+
+$color-wenge: #000000;
+$color-beige: #9CD811;
 $color-darkbrown: #3A241A;
-$color-darkorange: #B04008;
-$color-rose: #fa4251;
-$color-aqua: #64c8c8;
+$color-darkorange: #FFB135;
+$color-rose: #FF524C;
+$color-aqua: #16AEF4;
 $sidebarwd: 18rem;
 $contentwd: 54rem;
 
