--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -3,7 +3,7 @@
 
 <h1 class="category-header">
     {% if page_level == 1 %}
-        All Posts
+        전체 포스트
     {% else %}
         {{ category_title }}
     {% endif %}
@@ -39,7 +39,7 @@
                             {% if sub_page_tree.size > 2 %}
                                 <a href="{{ '/' | append: sub_page_tree[1] | prepend: site.baseurl }}" class="category">{{ sub_page_tree[1] }}</a>
                             {% else %}
-                                <span class="category">None</span>
+                                <span class="category">공지</span>
                             {% endif %}
                             {%- assign posting_date = sub_page.date | date: "%Y-%m-%d" -%}
                             {% if posting_date != "1900-01-01" %}
@@ -56,7 +56,7 @@
     {% if post_counts == 0 %}
         <div class="no-posts">
             <img src="{{ '/assets/img/sorry.png'' | prepend: site.baseurl }}"></img>
-            <h1>Sorry, No posts found</h1>
+            <h1>포스트가 없습니다.</h1>
         </div>
     {% endif %}
 </div>
