--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -3,20 +3,20 @@
   margin:auto;
 }
 
-.inner-header {
-  display:none;
-  background:linear-gradient(180deg, rgba(240,240,240,1) 0%, rgba(224,224,224,1) 100%);
-  border-radius:1rem 1rem 0 0;
-  padding:8px 16px;
+// .inner-header {
+//   display:none;
+//   background:linear-gradient(180deg, rgba(240,240,240,1) 0%, rgba(224,224,224,1) 100%);
+//   border-radius:1rem 1rem 0 0;
+//   padding:8px 16px;
 
-  .dot {
-    height:1rem;
-    width:1rem;
-    margin:0 4px;
-    border-radius:50%;
-    display:inline-block;
-  }
-}
+//   .dot {
+//     height:1rem;
+//     width:1rem;
+//     margin:0 4px;
+//     border-radius:50%;
+//     display:inline-block;
+//   }
+// }
 
 .inner-content {
   background:#fff;
@@ -41,8 +41,16 @@
   margin:auto;
   background-size:cover;
   background-position:center center;
-  box-shadow:0 16px 16px 8px rgba(31, 35, 46, .15);
+  // box-shadow:0 16px 16px 8px rgba(31, 35, 46, .15);
+
+  // &::before {
+  //   filter: blur(10px); /* 블러 효과 */
+  //   z-index: 1; /* 텍스트보다 뒤에 배치 */
+  //   position: absolute;
+  // }
 }
+
+
 
 .transbox {
   position:absolute;
@@ -56,14 +64,15 @@
   padding:1rem 0;
   text-align:center;
   backdrop-filter:blur(4px);
-  background-color:rgba(255, 255, 255, 0.5);
+  box-shadow:0 16px 16px 8px rgba(31, 35, 46, .15);
+  background-color:rgba(255, 255, 255);
 }
 
 .post-title {
   font-size:1.25rem;
   word-spacing:4px;
   font-weight:600;
-  word-wrap:break-word;
+  word-break: keep-all;
   font-family:Cambria, sans-serif;
 }
 
@@ -82,26 +91,26 @@
   position:relative;
   transition:all .5s;
 
-  background:
-  linear-gradient(
-    to right,
-    rgba(100, 200, 200, 1),
-    rgba(100, 200, 200, 1)
-  ),
-  linear-gradient(
-    to right,
-    rgba(255, 0, 0, 1),
-    rgba(255, 0, 180, 1),
-    rgba(0, 100, 200, 1)
-  );
-  background-size:100% 3px, 0 3px;
-  background-position:100% 100%, 0 100%;
-  background-repeat:no-repeat;
+  // background:
+  // linear-gradient(
+  //   to right,
+  //   rgba(100, 200, 200, 1),
+  //   rgba(100, 200, 200, 1)
+  // ),
+  // linear-gradient(
+  //   to right,
+  //   rgba(255, 0, 0, 1),
+  //   rgba(255, 0, 180, 1),
+  //   rgba(0, 100, 200, 1)
+  // );
+  // background-size:100% 3px, 0 3px;
+  // background-position:100% 100%, 0 100%;
+  // background-repeat:no-repeat;
 
-  &:hover {
-    background-size:0 3px, 100% 3px;
-    box-shadow:0 3px 48px 12px rgba(100, 200, 200, 1);
-  }
+  // &:hover {
+  //   background-size:0 3px, 100% 3px;
+  //   box-shadow:0 3px 48px 12px rgba(100, 200, 200, 1);
+  // }
 
   svg { margin-right:4px; }
 }
@@ -119,7 +128,7 @@
   line-height:1.5rem;
   color:#fff !important;
   font-size:1rem;
-  text-shadow:0 1px 2px rgba(0,0,0,0.6);
+  // text-shadow:0 1px 2px rgba(0,0,0,0.6);
   cursor:pointer;
 
   &:before {
@@ -139,19 +148,19 @@
     -webkit-border-radius:50%;
     border-radius:50%;
     background:#fff;
-    -webkit-box-shadow:-1px -1px 2px rgba(0,0,0,0.4);
-    box-shadow:-1px -1px 2px rgba(0,0,0,0.4);
+    // -webkit-box-shadow:-1px -1px 2px rgba(0,0,0,0.4);
+    // box-shadow:-1px -1px 2px rgba(0,0,0,0.4);
   }
-  &:hover {
-    animation:pulse 1s infinite;
-    transition:0.3s;
-  }
+  // &:hover {
+  //   animation:pulse 1s infinite;
+  //   transition:0.3s;
+  // }
 
-  @keyframes pulse {
-    0% { transform:scale(1); }
-    70% { transform:scale(0.9); }
-    100% { transform:scale(1); }
-  }
+  // @keyframes pulse {
+  //   0% { transform:scale(1); }
+  //   70% { transform:scale(0.9); }
+  //   100% { transform:scale(1); }
+  // }
 }
 
 .theme-0 {
@@ -236,7 +245,7 @@ main {
     background-color:#f4f4f4;
     border-radius:3px;
     font-family:'Courier New', Courier, monospace;
-    color:$color-darkorange;
+    color:$color-wenge;
     position:relative;
     top:-1px;
     vertical-align:middle;
@@ -365,7 +374,7 @@ main {
     border:0;
     height:2px;
     margin:1rem 0;
-    background:burlywood;
+    background:$color-darkgreen;
   }
 
   img + em {
@@ -476,7 +485,11 @@ main {
   bottom:2rem;
   right:2rem;
   width:48px;
-  background:rgba(100, 200, 200, 0.75);
+  // background:rgba(100, 200, 200, 0.75);
+  background:#eee;
+  // filter:drop-shadow(0 1px 2px rgba(0,0,0,0.6));
+  // border:1px solid #000;
+  opacity: 75%;
   cursor:pointer;
 
   &, &:before{
@@ -486,7 +499,7 @@ main {
   &:before{
     content:"";
     width:40px;
-    border:2px solid #fff;
+    // border:2px solid #fff;
     position:absolute;
     top:2px;
     left:2px;
@@ -496,10 +509,10 @@ main {
     width:28px;
     top:11px;
     left:10px;
-    fill:#fff !important;
-    filter:drop-shadow(0 1px 2px rgba(0,0,0,0.6));
+    fill:$color-brightgreen !important;
+    // filter:drop-shadow(0 1px 2px rgba(0,0,0,0.6));
     position:absolute;
-    animation:ascend 2s infinite;
+    // animation:ascend 2s infinite;
   }
 
   @keyframes ascend {
@@ -529,7 +542,7 @@ main {
 .post-title { font-size:2.25rem; }
 
 .post-info { 
-  margin-top:4rem; 
+  margin-top:2rem; 
   font-size:1.25rem;
 
   svg { width:20px; }
@@ -540,10 +553,10 @@ main {
   padding:8px;
   background-size:100% 4px, 0 4px;
 
-  &:hover {
-    background-size:0 4px, 100% 4px;
-    box-shadow:0 4px 64px 16px rgba(100, 200, 200, 1);
-  }
+  // &:hover {
+  //   background-size:0 4px, 100% 4px;
+  //   box-shadow:0 4px 64px 16px rgba(100, 200, 200, 1);
+  // }
 
   svg { margin-right:8px; }
 }
@@ -622,8 +635,9 @@ main {
 .inner-header { display:block; }
 
 .inner-content {
-  border-radius:0 0 1rem 1rem;
-  box-shadow:0 16px 16px 8px rgba(31, 35, 46, 0.15);
+  border-radius:1rem 1rem 1rem 1rem;
+  // box-shadow:0 16px 16px 8px rgba(31, 35, 46, 0.15);
+  box-shadow:0 8px 8px 4px rgba(31, 35, 46, 0.15);
 }
 
 .top-arrow { left:calc(#{$sidebarwd} + var(--pagewidth-desktop) - 4rem); }
