--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,19 +7,34 @@ html, body {
   padding:0;
 }
 
+// .fonts-loaded {
+//   a, span, p { font-family:"Nunito Sans", 'Lucida Sans', sans-serif; }
+//   h1, h2, h3 { font-family:"Lato", Helvetica, sans-serif; }
+//   mark { font-family:'Righteous', sans-serif; }
+// }
+
 .fonts-loaded {
-  a, span, p { font-family:"Nunito Sans", 'Lucida Sans', sans-serif; }
-  h1, h2, h3 { font-family:"Lato", Helvetica, sans-serif; }
-  mark { font-family:'Righteous', sans-serif; }
+  a, span, p { font-family:'Pretendard Variable'; }
+  h1, h2, h3 { font-family:'Pretendard Variable'; }
+  mark { font-family:'Pretendard Variable'; }
 }
+
+// a { text-decoration:none; }
+// a, span, p, h1, h2, h3, i { color:#3A241A; }
+// a, span, p { font-family:'Lucida Sans', sans-serif; }
+// h1, h2, h3, mark {
+//   margin:0;
+//   font-family:Helvetica, sans-serif;
+// }
 
 a { text-decoration:none; }
 a, span, p, h1, h2, h3, i { color:#3A241A; }
-a, span, p { font-family:'Lucida Sans', sans-serif; }
+a, span, p { font-family:'Pretendard Variable'; }
 h1, h2, h3, mark {
   margin:0;
-  font-family:Helvetica, sans-serif;
+  font-family:'Pretendard Variable';
 }
+
 mark { background-color:transparent; }
 
 svg {
