--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,10 +1,10 @@
 <div id="search">
+    <!-- <div class="wave"></div>
     <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
+    <div class="wave"></div> -->
 
     <div class="search-box">
-        <mark>Touch background to close</mark>
+        <!-- <mark>닫으려면 아무 곳이나 누르세요</mark> -->
         <div class="input-box">
             <input id="search-input"
                 type="search" 
