--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -58,14 +58,14 @@
         
             document.body.classList[currentTheme === 'dark' ? 'add' : 'remove']('dark-theme');
         </script>
-        <canvas id="stars" width="100%" height="100%"></canvas>
+        <!-- <canvas id="stars" width="100%" height="100%"></canvas> -->
         {% include sidebar.html %}
         <div id="post">
-            <div class="inner-header">
+            <!-- <div class="inner-header">
                 <span class="dot" style="background-color: #F86158;"></span>
                 <span class="dot" style="background-color: #FBBF2D;"></span>
                 <span class="dot" style="background-color: #2ACB45;"></span>
-            </div>
+            </div> -->
             <div class="inner-content">
                 {% include category.html %}
                 {% if page_type == "category" %}
