--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -145,21 +145,21 @@
 }
 
 .nav-lh {
-  &:before {
-    content:"";
-    position:absolute;
-    display:block;
-    left:0;
-    border-radius:1.5rem;
-    background:rgba(gold, .375);
-    width:3rem;
-    height:3rem;
-    transition:.3s;
-  }
-  &:hover:before {
-    width:105%;
-    background:gold;
-  }
+  // &:before {
+  //   content:"";
+  //   position:absolute;
+  //   display:block;
+  //   left:0;
+  //   border-radius:1.5rem;
+  //   background:rgba(gold, .375);
+  //   width:3rem;
+  //   height:3rem;
+  //   transition:.3s;
+  // }
+  // &:hover:before {
+  //   width:105%;
+  //   background:gold;
+  // }
 
   svg { transform:none; }
 }
