--- a/_sass/pagination.scss
+++ b/_sass/pagination.scss
@@ -55,7 +55,7 @@
     aspect-ratio:5/3;
     border-radius:0;
 
-    &:hover { opacity:0.8; }
+    // &:hover { opacity:0.8; }
   }
 
   .empty { opacity:0.5; }
@@ -74,17 +74,18 @@
     font-weight:600;
     font-size:1rem;
     line-height:2rem;
-    word-break:normal;
-    white-space:nowrap;
+    // word-break:normal;
+    word-wrap:break-word;
+    // white-space:nowrap;
     overflow:hidden;
     text-overflow:ellipsis;
     text-align:left;
   }
   .title_post:hover,
   .category:hover {
-    color:$color-rose;
+    color:$color-darkgreen;
   }
-  .category{ color:mediumseagreen !important; }
+  .category{ color:$color-darkbrown !important; }
 
   .txt_post {
     display:-webkit-box;
@@ -93,7 +94,7 @@
     color:grey;
     overflow:hidden;
     text-overflow:ellipsis;
-    -webkit-line-clamp:2;
+    -webkit-line-clamp:3;
     -webkit-box-orient:vertical;
     word-wrap:break-word;
   }
@@ -137,7 +138,7 @@
 }
 .pagination-number.active {
   color:#fff;
-  background:#0085b6;
+  background:dodgerblue;
 }
 
 @include mq(tablet){
@@ -170,12 +171,12 @@
 #article_content {
   display:flex;
   transition:.3s;
-  box-shadow:0 1px 1px 0 rgba(31, 35, 46, .15);
+  // box-shadow:0 1px 1px 0 rgba(31, 35, 46, .15);
 
-  &:hover {
-    transform:translate(0px, -4px);
-    box-shadow:0 15px 45px -10px rgba(10, 16, 34, .2);
-  }
+  // &:hover {
+  //   transform:translate(0px, -4px);
+  //   box-shadow:0 15px 45px -10px rgba(10, 16, 34, .2);
+  // }
 
   .thumbnail_post {
     display:block;
@@ -188,20 +189,20 @@
     width:100%;
     margin:auto 0 auto -5rem;
     padding:8px 24px;
-    background-color:rgba(255,255,255,0.95);
-    background-image:url($baseurl + "/assets/img/tile.png");
+    // background-color:rgba(255,255,255,0.95);
+    // background-image:url($baseurl + "/assets/img/tile.png");
     border-radius:6px;
   }
 
   .category{ font-weight:bold; }
 
   .title_post{
-    font-size:1.5rem;
+    font-size:1.25rem;
     padding-top:12px;
   }
   .info-post,
   .txt_post {
-    font-size:1.125rem;
+    font-size:1rem;
   }
   .txt_post {
     margin-top:1rem;
@@ -226,12 +227,12 @@
   .thumbnail_post { height:15rem; }
 
   .box_contents {
-    margin-left:-6rem;
+    margin-left:0rem;
     border-radius:8px;
   }
 
   .date { font-size:1.125rem; }
-  .category { font-size:1.25rem; }
+  .category { font-size:1.125rem; }
   .txt_post { margin-top:1.25rem; }
 }
 
