--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -12,9 +12,9 @@ $color-darkgreen: #84D904;
 
 
 $color-wenge: #3A241A;
-$color-beige: $color-darkgreen;
+$color-beige: #84D904;
 $color-darkbrown: #3A241A;
-$color-darkorange: $color-brightgreen;
+$color-darkorange: #93F205;
 $color-rose: #FF524C;
 $color-aqua: #16AEF4;
 $sidebarwd: 18rem;
