--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -65,7 +65,7 @@
   text-align:center;
   backdrop-filter:blur(4px);
   box-shadow:0 16px 16px 8px rgba(31, 35, 46, .15);
-  background-color:rgba(255, 255, 255);
+  background-color:#fff;
 }
 
 .post-title {
