네이버 블로그 이전 1

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -25,6 +25,8 @@
 
         gtag('config', 'G-W26YWCX166');
         </script>
+        <!-- End Google tag (gtag.js) -->
+
         {% include head.html %}
         <link rel="preload" href="{{ site.profile_img | prepend: site.baseurl }}" as="image">
         <link rel="stylesheet" href="{{ '/assets/css/style.css' | prepend: site.baseurl }}">
