--- a/_sass/pagination.scss
+++ b/_sass/pagination.scss
@@ -170,8 +170,8 @@
 
 #article_content {
   display:flex;
-  transition:.3s;
-  // box-shadow:0 1px 1px 0 rgba(31, 35, 46, .15);
+  // transition:.3s;
+  box-shadow:0px 0px 5px 1px rgba(31, 35, 46, 0.15);
 
   // &:hover {
   //   transform:translate(0px, -4px);
