--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -15,7 +15,7 @@
 .side-banner {
   width:100%;
   text-align:center;
-  box-shadow:0px 4px 8px 0 #aaa;
+  // box-shadow:0px 4px 8px 0 #aaa;
 
   button {
     position:absolute;
